[package]
name = "filebin-img-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
infer = "0.15.0"
native-dialog = "0.6.4"
notify-rust = "4.8.0"
reqwest = { version = "0.11.18", features = ["multipart", "rustls-tls"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tree_magic_mini = { version = "3.0.3" }
wl-clipboard-rs = "0.7.0"
